# circuit

./: README.md  pyproject.toml
circuit_analyser/: diagram_api.py  diagram_elements.py
tests/: diagram_01.drawio  diagram_01.json  minimal_diagram.drawio  test_math.py  test_xml.py
